[gd_scene load_steps=4 format=3 uid="uid://yaht8i4bkv2u"]

[ext_resource type="Script" path="res://HUD.gd" id="1_om6pf"]

[sub_resource type="InputEventAction" id="InputEventAction_gf5y4"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_lxmoi"]
events = [SubResource("InputEventAction_gf5y4")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_om6pf")

[node name="TextDisplay" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -39.0
offset_right = 20.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberDisplay" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -50.0
offset_right = 4.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_lxmoi")
text = "Play"

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
